unpackaged/main/default/objects/Opportunity/fields/Additional__c.field-meta.xml
<CustomField>
    <fullName>Additional__c</fullName>
    <inlineHelpText>Additional billing or provisioning notes related to the booking.</inlineHelpText>
    <label>Booking Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>