unpackaged/main/default/objects/Opportunity/fields/Additional_Usage_Pause_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Usage_Pause_End_Date__c</fullName>
    <formula>Contract.Additional_Usage_Pause_Billing_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Usage Pause End Date</label>
    <type>Date</type>
</CustomField>