unpackaged/main/default/objects/Opportunity/fields/Age_from_SQO__c.field-meta.xml
<CustomField>
    <fullName>Age_from_SQO__c</fullName>
    <formula>IF(
 Sales_Qualified_Opportunity__c,
 IF(IsClosed,CloseDate - Sales_Qualified_At__c,TODAY()-Sales_Qualified_At__c),
 IF(
   Is_Qualified_Pipeline__c,
   IF(IsClosed,CloseDate - Qualified_Pipeline_AR_Date__c,TODAY()-Qualified_Pipeline_AR_Date__c),
   NULL
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For open sales qualified opportunities (SQOs), equal to the number of days between the current date and the sales qualified at date. For closed SQOs, equal to the number of days between the close date and the sales qualified at date.</inlineHelpText>
    <label>Age from SQO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>