unpackaged/main/default/objects/Opportunity/fields/AI_Disposition__c.field-meta.xml
<CustomField>
    <fullName>AI_Disposition__c</fullName>
    <label>AI Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not discussed</fullName>
            </value>
            <value>
                <fullName>Not a factor</fullName>
            </value>
            <value>
                <fullName>Minor factor</fullName>
            </value>
            <value>
                <fullName>Major factor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>