unpackaged/main/default/objects/Opportunity/fields/AI_Disposition_Details__c.field-meta.xml
<CustomField>
    <fullName>AI_Disposition_Details__c</fullName>
    <label>AI Disposition Details</label>
    <type>TextArea</type>
</CustomField>