unpackaged/main/default/objects/Opportunity/fields/Alternative_Solution__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Solution__c</fullName>
    <inlineHelpText>The solution the prospect/customer elected to move forward with instead of a committed Retool plan</inlineHelpText>
    <label>Alternative Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Service (Cloud)</fullName>
            </value>
            <value>
                <fullName>Self Service (On Prem)</fullName>
            </value>
            <value>
                <fullName>Freetool</fullName>
            </value>
            <value>
                <fullName>Competitor / Internal Build</fullName>
            </value>
            <value>
                <fullName>Nothing</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>