unpackaged/main/default/objects/Opportunity/fields/Att_Critical_Touch_Link__c.field-meta.xml
<CustomField>
    <fullName>Att_Critical_Touch_Link__c</fullName>
    <label>Att: Critical Touch Link</label>
    <type>Url</type>
</CustomField>