unpackaged/main/default/objects/Opportunity/fields/Att_Critical_Touch_Reason__c.field-meta.xml
<CustomField>
    <fullName>Att_Critical_Touch_Reason__c</fullName>
    <label>Att: Critical Touch Reason</label>
    <type>TextArea</type>
</CustomField>