unpackaged/main/default/objects/Opportunity/fields/Att_Critical_Touch_Type__c.field-meta.xml
<CustomField>
    <fullName>Att_Critical_Touch_Type__c</fullName>
    <label>Att: Critical Touch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Touch_Types</valueSetName>
    </valueSet>
</CustomField>