unpackaged/main/default/objects/Opportunity/fields/Att_First_Touch_Link__c.field-meta.xml
<CustomField>
    <fullName>Att_First_Touch_Link__c</fullName>
    <label>Att: First Touch Link</label>
    <type>Url</type>
</CustomField>