unpackaged/main/default/objects/Opportunity/fields/Att_First_Touch_Type__c.field-meta.xml
<CustomField>
    <fullName>Att_First_Touch_Type__c</fullName>
    <label>Att: First Touch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Touch_Types</valueSetName>
    </valueSet>
</CustomField>