unpackaged/main/default/objects/Opportunity/fields/Att_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Att_Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Att: Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AttributedOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>