unpackaged/main/default/objects/Opportunity/fields/Attached_Services_Deal_Count__c.field-meta.xml
<CustomField>
    <fullName>Attached_Services_Deal_Count__c</fullName>
    <label>Attached Services Deal Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>