unpackaged/main/default/objects/Opportunity/fields/Attached_Services_Status__c.field-meta.xml
<CustomField>
    <fullName>Attached_Services_Status__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <label>Attached Services Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>