unpackaged/main/default/objects/Opportunity/fields/Auto_close__c.field-meta.xml
<CustomField>
    <fullName>Auto_close__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If set to true, this renewal will automatically close on the Auto Close Date.  Applies only to renewals.</inlineHelpText>
    <label>Auto Close?</label>
    <type>Checkbox</type>
</CustomField>