unpackaged/main/default/objects/Opportunity/fields/Auto_close_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_close_Date__c</fullName>
    <formula>IF( Auto_close__c = FALSE,NULL,  Term_Start_Date__c  -  (Auto_close_Notice_days__c + 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date on which the opportunity is set to automatically close. Applies only to renewal opportunities set to automatically close.</inlineHelpText>
    <label>Auto Close: Date</label>
    <type>Date</type>
</CustomField>