unpackaged/main/default/objects/Opportunity/fields/Auto_close_Notice_days__c.field-meta.xml
<CustomField>
    <fullName>Auto_close_Notice_days__c</fullName>
    <inlineHelpText>The number of day&#39;s notice before the end of the customer expiring term that the customer or Retool have agreed to indicate to the other party if they wish to not automatically renew at the agreed renewal terms. Applies only to renewals which were set to automatically close.</inlineHelpText>
    <label>Auto Close: Notice (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>