unpackaged/main/default/objects/Opportunity/fields/Auto_Close_Removal_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Removal_Date__c</fullName>
    <inlineHelpText>The date on which automatic close was turned off for this opportunity. Applies only to renewals which were previously set to automatically close.</inlineHelpText>
    <label>Auto Close: Removal Date</label>
    <type>Date</type>
</CustomField>