unpackaged/main/default/objects/Opportunity/fields/Auto_Close_Removal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Removal_Reason__c</fullName>
    <inlineHelpText>The reason why this opportunity had automatic close disabled.  Applies only to renewals which were previously set to automatically close.</inlineHelpText>
    <label>Auto Close: Removal Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>