unpackaged/main/default/objects/Opportunity/fields/Auto_close_Removed_By__c.field-meta.xml
<CustomField>
    <fullName>Auto_close_Removed_By__c</fullName>
    <inlineHelpText>The name of the user who turned off automatic close.  Applies only to renewals which were previously set to automatically close.</inlineHelpText>
    <label>Auto Close: Removed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>