unpackaged/main/default/objects/Opportunity/fields/Automation_Error__c.field-meta.xml
<CustomField>
    <fullName>Automation_Error__c</fullName>
    <label>Automation Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>