unpackaged/main/default/objects/Opportunity/fields/Baseline_Growth_Pct__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Growth_Pct__c</fullName>
    <formula>IF(
  Originating_Opportunity__r.Total_Annualized_Revenue__c = 0,
  NULL,
  Baseline_Growth_Amount__c / Originating_Opportunity__r.Total_Annualized_Revenue__c
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Baseline Growth Amount as a percentage of the originating opportunity&#39;s Total Ending Annualized Revenue.</inlineHelpText>
    <label>Baseline Growth %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>