unpackaged/main/default/objects/Opportunity/fields/Block_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Block_Closed_Won__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked by Sales Operations, prevents the opportunity from being moved to Closed Won.</inlineHelpText>
    <label>Block Closed Won</label>
    <type>Checkbox</type>
</CustomField>