unpackaged/main/default/objects/Opportunity/fields/bombora_data__Active_Topics_at_Creation__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Active_Topics_at_Creation__c</fullName>
    <label># Active Topics at Creation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>