unpackaged/main/default/objects/Opportunity/fields/Booking_Channel_NRR__c.field-meta.xml
<CustomField>
    <fullName>Booking_Channel_NRR__c</fullName>
    <label>Booking Channel (NRR)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Booking_Channels</valueSetName>
    </valueSet>
</CustomField>