unpackaged/main/default/objects/Opportunity/fields/Booking_Date_Method__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date_Method__c</fullName>
    <defaultValue>&quot;v1&quot;</defaultValue>
    <label>Booking Date Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>v1</fullName>
            </value>
            <value>
                <fullName>v2</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>