unpackaged/main/default/objects/Opportunity/fields/Booking_Details__c.field-meta.xml
<CustomField>
    <fullName>Booking_Details__c</fullName>
    <formula>IF(ISPICKVAL(Booking_Status__c,&quot;Locked&quot;),IMAGE(&quot;https://retool--c.vf.force.com/resource/1717943467000/GraphicsPackNew/fatcow/farmfresh/32/lock.png&quot;, &quot;Locked&quot;,16,16)&amp;&quot;  &quot;,NULL)&amp;
IF(Auto_close__c,IMAGE(&quot;https://retool--c.vf.force.com/resource/1717943467000/GraphicsPackNew/fatcow/farmfresh/32/recycle.png&quot;,&quot;Auto-close&quot;,16,16)&amp;&quot;  &quot;,NULL)&amp;
IF(
  ISBLANK(Link_to_Contract__c),
  NULL,
  HYPERLINK(Link_to_Contract__c,&quot;Contract &quot;&amp;Contract.Proposal_Order_Number__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Details</label>
    <type>Text</type>
</CustomField>