unpackaged/main/default/objects/Opportunity/fields/Booking_Half__c.field-meta.xml
<CustomField>
    <fullName>Booking_Half__c</fullName>
    <formula>TEXT(YEAR(Booking_Date__c))
&amp; &quot;-&quot;&amp;
CASE(Month(Booking_Date__c),
1, &quot;H1&quot;,
2, &quot;H1&quot;,
3, &quot;H1&quot;,
4, &quot;H1&quot;,
5, &quot;H1&quot;,
6, &quot;H1&quot;,
7, &quot;H2&quot;,
8, &quot;H2&quot;,
9, &quot;H2&quot;,
10, &quot;H2&quot;,
11, &quot;H2&quot;,
12, &quot;H2&quot;,
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Half</label>
    <type>Text</type>
</CustomField>