unpackaged/main/default/objects/Opportunity/fields/Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status__c</fullName>
    <defaultValue>&quot;Pending Review&quot;</defaultValue>
    <inlineHelpText>The status of the financial booking with respect to the month-end close.</inlineHelpText>
    <label>Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>