unpackaged/main/default/objects/Opportunity/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <defaultValue>&quot;Standard&quot;</defaultValue>
    <inlineHelpText>Denotes the type of booking represented by the opportunity. Generally equal to &quot;Standard&quot;. For Debooks, equal to &quot;Debook&quot;. For Putbacks equal to &quot;Putback&quot;.

[Utilized by Xactly]</inlineHelpText>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Debook</fullName>
            </value>
            <value>
                <fullName>Putback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>