unpackaged/main/default/objects/Opportunity/fields/Booking_Week__c.field-meta.xml
<CustomField>
    <fullName>Booking_Week__c</fullName>
    <description>&lt;a href=&quot;https://retoolconfluence.atlassian.net/wiki/spaces/SAL/pages/121077975/Booking+and+Contract+Dates&quot; target=&quot;_blank&quot;&gt;Learn more about Opportunity date fields&lt;/a&gt;</description>
    <formula>CASE(MOD(Booking_Date__c - DATE(1900, 1, 6), 7),
0, Booking_Date__c + 0,
1, Booking_Date__c + 6,
2, Booking_Date__c + 5,
3, Booking_Date__c + 4,
4, Booking_Date__c + 3,
5, Booking_Date__c + 2,
6, Booking_Date__c + 1,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calendar week in which the Booking Date falls. Returns the date of the Saturday as the last day of the week that the date falls in.</inlineHelpText>
    <label>Booking Week</label>
    <type>Date</type>
</CustomField>