unpackaged/main/default/objects/Opportunity/fields/BU_Name__c.field-meta.xml
<CustomField>
    <fullName>BU_Name__c</fullName>
    <inlineHelpText>A short (&lt;= 15 character) name of the team of BU related to this deal to differentiate it from other opportunities on the account. Is inserted into the opportunity name after the name of the account.</inlineHelpText>
    <label>BU Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>