unpackaged/main/default/objects/Opportunity/fields/Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Business_Line__c</fullName>
    <description>[Utilized by Xactly]</description>
    <formula>CASE(RecordType.Name, 
 &quot;Enterprise&quot;,&quot;Committed&quot;,
 &quot;Renewal&quot;,&quot;Committed&quot;,
 &quot;Professional Services&quot;,&quot;Committed&quot;,
 &quot;Self Service&quot;,&quot;Self Service&quot;,
 &quot;Churn&quot;,&quot;Self Service&quot;,
 &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Groups opportunities by Retool business line. Enterprise, Renewal --&gt; Committed and Self Service, Churn --&gt; Self Service.</inlineHelpText>
    <label>Business Line</label>
    <type>Text</type>
</CustomField>