unpackaged/main/default/objects/Opportunity/fields/Call_Vendor_of_Choice__c.field-meta.xml
<CustomField>
    <fullName>Call_Vendor_of_Choice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call: Vendor of Choice?</label>
    <type>Checkbox</type>
</CustomField>