unpackaged/main/default/objects/Opportunity/fields/Can_Manage_Deal__c.field-meta.xml
<CustomField>
    <fullName>Can_Manage_Deal__c</fullName>
    <formula>Opportunity_I_am_Owner__c ||
Opportunity_I_Am_Owner_Manager__c ||
(Sales_Qualified_By__c = $User.Id &amp;&amp; ISPICKVAL(Type,&quot;Unqualified&quot;)) ||
$User.Manage_Bookings__c || 
(
  ISPICKVAL($User.Department__c,&quot;Sales&quot;) &amp;&amp;
  (
    ISPICKVAL($User.Team__c,&quot;Leadership&quot;) || 
    ISPICKVAL($User.Team__c,&quot;Account Executives&quot;) || 
    ISPICKVAL($User.Team__c,&quot;Sales Account Management&quot;)
  ) &amp;&amp;
  (
    ISPICKVAL($User.Level__c,&quot;Head&quot;) || ISPICKVAL($User.Level__c,&quot;Lead&quot;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Manage Deal?</label>
    <type>Checkbox</type>
</CustomField>