unpackaged/main/default/objects/Opportunity/fields/Can_Reverse_Auto_Close__c.field-meta.xml
<CustomField>
    <fullName>Can_Reverse_Auto_Close__c</fullName>
    <formula>Auto_close__c &amp;&amp;
IsWon</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Reverse Auto Close?</label>
    <type>Checkbox</type>
</CustomField>