unpackaged/main/default/objects/Opportunity/fields/ChampifyIo__IsChampifyOpportunity__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__IsChampifyOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Champify Opportunity</label>
    <type>Checkbox</type>
</CustomField>