unpackaged/main/default/objects/Opportunity/fields/Churn_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reason_Details__c</fullName>
    <inlineHelpText>Additional context as to why the customer decided not to renew or reduced spend.</inlineHelpText>
    <label>Contraction/Churn Reason Details</label>
    <length>70000</length>
    <type>LongTextArea</type>
</CustomField>