unpackaged/main/default/objects/Opportunity/fields/Clazar_ACE_Status__c.field-meta.xml
<CustomField>
    <fullName>Clazar_ACE_Status__c</fullName>
    <label>Clazar ACE Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Submit</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>