unpackaged/main/default/objects/Opportunity/fields/Close_Method__c.field-meta.xml
<CustomField>
    <fullName>Close_Method__c</fullName>
    <inlineHelpText>Name of the workflow or automation that was used when the opportunity was moved to a &quot;closed&quot; stage.</inlineHelpText>
    <label>Close Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>