unpackaged/main/default/objects/Opportunity/fields/Close_Month__c.field-meta.xml
<CustomField>
    <fullName>Close_Month__c</fullName>
    <description>&lt;a href=&quot;https://retoolconfluence.atlassian.net/wiki/spaces/SAL/pages/121077975/Booking+and+Contract+Dates&quot; target=&quot;_blank&quot;&gt;Learn more about Opportunity date fields&lt;/a&gt;</description>
    <formula>DATE(YEAR(CloseDate),MONTH(CloseDate),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calendar month in which the Close Date falls. Returns the date of the first of that month.</inlineHelpText>
    <label>Close Month</label>
    <type>Date</type>
</CustomField>