unpackaged/main/default/objects/Opportunity/fields/Close_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Close_Quarter__c</fullName>
    <description>&lt;a href=&quot;https://retoolconfluence.atlassian.net/wiki/spaces/SAL/pages/121077975/Booking+and+Contract+Dates&quot; target=&quot;_blank&quot;&gt;Learn more about Opportunity date fields&lt;/a&gt;</description>
    <formula>TEXT(YEAR(CloseDate))
&amp; &quot;-&quot;&amp;
CASE(Month(CloseDate),
1, &quot;Q1&quot; ,
2, &quot;Q1&quot;,
3, &quot;Q1&quot;,
4, &quot;Q2&quot;,
5, &quot;Q2&quot;,
6, &quot;Q2&quot;,
7, &quot;Q3&quot;,
8, &quot;Q3&quot;,
9, &quot;Q3&quot;,
10, &quot;Q4&quot;,
11, &quot;Q4&quot;,
12, &quot;Q4&quot;,
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The first day of the calendar quarter in which the Close Date falls.</inlineHelpText>
    <label>Close Quarter</label>
    <type>Text</type>
</CustomField>