unpackaged/main/default/objects/Opportunity/fields/Coach__c.field-meta.xml
<CustomField>
    <fullName>Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A guide who does not have the required power or influence to purchase</inlineHelpText>
    <label>Coach</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Coach)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>