unpackaged/main/default/objects/Opportunity/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <description>[Utilized by Xactly]</description>
    <inlineHelpText>In months, the duration of this agreement.</inlineHelpText>
    <label>Contract Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>