unpackaged/main/default/objects/Opportunity/fields/Converted_Org_Final_Annualized_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Converted_Org_Final_Annualized_Revenue__c</fullName>
    <inlineHelpText>The annualized Stripe revenue of the Org to Convert at the point of Closed Won. Applies only to opportunities with Subtype = &quot;Conversion - Self Service to Annual&quot;</inlineHelpText>
    <label>Self Service: Conv Org Final Ann Rev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>