unpackaged/main/default/objects/Opportunity/fields/Corrected_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Corrected_Owner_ID__c</fullName>
    <formula>IF(
  IsClosed = FALSE &amp;&amp; NOT(ISPICKVAL(Type,&quot;Unqualified&quot;)) &amp;&amp; Ignore_mismatched_owner__c = FALSE &amp;&amp; NOT(ISPICKVAL(StageName,&quot;Pending&quot;)) &amp;&amp; Owner.Full_Name__c != &quot;Salesforce Admin&quot;,
  IF(
    RecordType.Name = &quot;Professional Services&quot; &amp;&amp; OwnerId != Account.Professional_Services__c,
    CASESAFEID(Account.Professional_Services__c),
    IF(
      RecordType.Name != &quot;Professional Services&quot; &amp;&amp; OwnerId != Account.OwnerId,
      CASESAFEID(Account.OwnerId),
      NULL
    ) 
  ),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corrected Owner ID</label>
    <type>Text</type>
</CustomField>