unpackaged/main/default/objects/Opportunity/fields/Create_Method__c.field-meta.xml
<CustomField>
    <fullName>Create_Method__c</fullName>
    <inlineHelpText>The workflow or automation used to create the opportunity record.</inlineHelpText>
    <label>Create Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>