unpackaged/main/default/objects/Opportunity/fields/Created_Date_Half__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Half__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))
&amp; &quot;-&quot;&amp;
CASE(Month(DATEVALUE(CreatedDate)),
1, &quot;H1&quot;,
2, &quot;H1&quot;,
3, &quot;H1&quot;,
4, &quot;H1&quot;,
5, &quot;H1&quot;,
6, &quot;H1&quot;,
7, &quot;H2&quot;,
8, &quot;H2&quot;,
9, &quot;H2&quot;,
10, &quot;H2&quot;,
11, &quot;H2&quot;,
12, &quot;H2&quot;,
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Half</label>
    <type>Text</type>
</CustomField>