unpackaged/main/default/objects/Opportunity/fields/Created_Date_Week__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Week__c</fullName>
    <description>&lt;a href=&quot;https://retoolconfluence.atlassian.net/wiki/spaces/SAL/pages/121077975/Booking+and+Contract+Dates&quot; target=&quot;_blank&quot;&gt;Learn more about Opportunity date fields&lt;/a&gt;</description>
    <formula>CASE(MOD(DATEVALUE(CreatedDate) - DATE(1900, 1, 6), 7),
0, DATEVALUE(CreatedDate) + 0,
1, DATEVALUE(CreatedDate) + 6,
2, DATEVALUE(CreatedDate) + 5,
3, DATEVALUE(CreatedDate) + 4,
4, DATEVALUE(CreatedDate) + 3,
5, DATEVALUE(CreatedDate) + 2,
6, DATEVALUE(CreatedDate)+ 1,
TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calendar week in which the opportunity created date falls. Returns the date of the Saturday as the last day of the week that the date falls in.</inlineHelpText>
    <label>Created Date Week</label>
    <type>Date</type>
</CustomField>