unpackaged/main/default/objects/Opportunity/fields/Critical_Event_Comments__c.field-meta.xml
<CustomField>
    <fullName>Critical_Event_Comments__c</fullName>
    <label>Critical Event Comments</label>
    <type>TextArea</type>
</CustomField>