unpackaged/main/default/objects/Opportunity/fields/Critical_Event_Link__c.field-meta.xml
<CustomField>
    <fullName>Critical_Event_Link__c</fullName>
    <label>Critical Event Link</label>
    <type>Url</type>
</CustomField>